--- a/script/references.bib
+++ b/script/references.bib
@@ -838,3 +838,61 @@
 	url = {https://joss.theoj.org/papers/10.21105/joss.00774},
 	note = {Publisher: The Open Journal}
 }
+
+@article{bryson2016,
+	title = {Towards a multi-actor theory of public value co-creation},
+	author = {Bryson, John and Sancino, Alessandro and Benington, John and {Sørensen}, Eva},
+	year = {2016},
+	month = {05},
+	date = {2016-05},
+	journal = {Public Management Review},
+	pages = {640--654},
+	volume = {19},
+	number = {5},
+	doi = {10.1080/14719037.2016.1192164},
+	url = {https://www.tandfonline.com/doi/abs/10.1080/14719037.2016.1192164},
+	note = {Publisher: Routledge}
+}
+
+@article{arduini2014a,
+	title = {An overview of scholarly research on public e-services ? A meta-analysis of the literature},
+	author = {Arduini, Davide and Zanfei, Antonello},
+	year = {2014},
+	date = {2014},
+	journal = {Telecommunications Policy},
+	pages = {476--495},
+	volume = {38},
+	number = {5-6},
+	doi = {10.1016/j.telpol.2013.10.007},
+	url = {<Go to ISI>://WOS:000338822900008},
+	note = {Type: Journal Article}
+}
+
+@article{wirtz2016,
+	title = {A meta-analysis of empirical e-government research and its future research implications:},
+	author = {Wirtz, Bernd W. and Daiser, Peter},
+	year = {2016},
+	month = {07},
+	date = {2016-07},
+	journal = {International Review of Administrative Sciences},
+	pages = {144--163},
+	volume = {84},
+	number = {1},
+	doi = {10.1177/0020852315599047},
+	url = {https://journals.sagepub.com/doi/10.1177/0020852315599047},
+	note = {Publisher: SAGE PublicationsSage UK: London, England}
+}
+
+@article{bailey2020,
+	title = {Beyond design and use: How scholars should study intelligent technologies},
+	author = {Bailey, Diane E. and Barley, Stephen R.},
+	year = {2020},
+	month = {06},
+	date = {2020-06-01},
+	journal = {Information and Organization},
+	pages = {100286},
+	volume = {30},
+	number = {2},
+	doi = {10.1016/J.INFOANDORG.2019.100286},
+	note = {Publisher: Pergamon}
+}
