--- a/script/references.bib
+++ b/script/references.bib
@@ -896,3 +896,107 @@
 	doi = {10.1016/J.INFOANDORG.2019.100286},
 	note = {Publisher: Pergamon}
 }
+
+@article{watanabe2020,
+	title = {Theory-Driven Analysis of Large Corpora: Semisupervised Topic Classification of the UN Speeches:},
+	author = {Watanabe, Kohei and Zhou, Yuan},
+	year = {2020},
+	month = {02},
+	date = {2020-02},
+	journal = {Social Science Computer Review},
+	doi = {10.1177/0894439320907027},
+	url = {https://journals.sagepub.com/doi/full/10.1177/0894439320907027},
+	note = {Publisher: SAGE PublicationsSage CA: Los Angeles, CA}
+}
+
+@article{dosi2021,
+	title = {Embodied and disembodied technological change: The sectoral patterns of job-creation and job-destruction},
+	author = {Dosi, G. and Piva, M. and Virgillito, M.E. and Vivarelli, M.},
+	year = {2021},
+	month = {05},
+	date = {2021-05},
+	journal = {Research Policy},
+	pages = {104199},
+	volume = {50},
+	number = {4},
+	doi = {10.1016/j.respol.2021.104199},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S0048733321000032},
+	langid = {en}
+}
+
+@article{fernández-macías2022,
+	title = {A Comprehensive Taxonomy of Tasks for Assessing the Impact of New Technologies on Work},
+	author = {{Fernández-Macías}, Enrique and Bisello, Martina},
+	year = {2022},
+	month = {01},
+	date = {2022-01},
+	journal = {Social Indicators Research},
+	pages = {821--841},
+	volume = {159},
+	number = {2},
+	doi = {10.1007/s11205-021-02768-7},
+	url = {https://link.springer.com/10.1007/s11205-021-02768-7},
+	langid = {en}
+}
+
+@article{doellgast2022,
+	title = {Collective regulation and the future of work in the digital economy: Insights from comparative employment relations},
+	author = {Doellgast, Virginia and Wagner, Ines},
+	year = {2022},
+	month = {05},
+	date = {2022-05-18},
+	journal = {Journal of Industrial Relations},
+	pages = {002218562211011},
+	doi = {10.1177/00221856221101165},
+	url = {http://journals.sagepub.com/doi/10.1177/00221856221101165},
+	langid = {en}
+}
+
+@book{barley2020,
+	title = {Work and Technological Change},
+	author = {Barley, Stephen R.},
+	year = {2020},
+	month = {10},
+	date = {2020-10-27},
+	publisher = {Oxford University Press},
+	note = {Publication Title: Work and Technological Change
+DOI: 10.1093/oso/9780198795209.001.0001}
+}
+
+@article{doellgast2022a,
+	title = {Collective regulation and the future of work in the digital economy: Insights from comparative employment relations},
+	author = {Doellgast, Virginia and Wagner, Ines},
+	year = {2022},
+	month = {05},
+	date = {2022-05-18},
+	journal = {Journal of Industrial Relations},
+	pages = {002218562211011},
+	doi = {10.1177/00221856221101165},
+	url = {http://journals.sagepub.com/doi/10.1177/00221856221101165},
+	langid = {en}
+}
+
+@book{barley2020a,
+	title = {Work and Technological Change},
+	author = {Barley, Stephen R.},
+	year = {2020},
+	month = {10},
+	date = {2020-10},
+	publisher = {Oxford University Press},
+	note = {Publication Title: Work and Technological Change
+DOI: 10.1093/oso/9780198795209.001.0001}
+}
+
+@article{klein2021,
+	title = {The (re-)configuration of digital work in the wake of profound technological innovation: Constellations and hidden work},
+	author = {Klein, Stefan and Watson-Manheim, Mary Beth},
+	year = {2021},
+	month = {12},
+	date = {2021-12-01},
+	journal = {Information and Organization},
+	pages = {100377},
+	volume = {31},
+	number = {4},
+	doi = {10.1016/J.INFOANDORG.2021.100377},
+	note = {Publisher: Pergamon}
+}
