--- a/script/tm_dgrl_Markdown.Rmd
+++ b/script/tm_dgrl_Markdown.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Finding a needle in a digital haystack: A Topic Model Approach to the Digital Government Research Library v17.5"
+title: "The needle and the haystack: An literature review using Structural Topic Modeling in a Digital Government Corpus"
 author: "Andres Aguilera Castillo"
 date: "`r format(Sys.time(), '%d %B %Y')`"
 output:
@@ -39,19 +39,25 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ## Abstract
 
-Digital Government is a growing and vibrant multidisciplinary field of research, the fast increase in research output has challenged researchers to explore and use novel computational ways and methods to perform evidence synthesis on the extant literature and be able to map a scientific discipline, explore the thematic evolution over time and identify potential avenues for further research. Topic modeling has emerged as a powerful technique from the computer science field that is contributing to the examination of large amounts of text data. This chapter aims to perform a 'smart literature review' on a subset of the Digital Government Reference Library (DGRL) version 17.5, by using text as data approach and a topic modeling technique known as Latent Dirichlet Allocation (LDA). To our best knowledge, this is the first attempt to use unsupervised machine learning techniques with this data set. This effort may contribute to creating a map of the field, identify the evolving themes in the literature and help to identify promising areas of research.
+Digital Government is a growing and vibrant multidisciplinary field of research, the fast increase in research output has challenged researchers to explore and use novel computational ways and methods to perform evidence synthesis on the extant literature and be able to map a scientific discipline, explore the thematic evolution over time and identify potential avenues for further research. Topic modeling has emerged as a powerful technique from the computer science field that is contributing to the examination of large amounts of text data. This manuscript demonstrates the training of a topic model aimed to dissect and perform a 'smart literature review' on a subset of the Digital Government Reference Library (DGRL) version 17.5. Structural topic modeling is a conceptual and methodological evolution of 'vanilla' topic modeling that allow the estimation of covariates contained in the metadata of corpora to calculate topic prelavence. To our best knowledge, this is the first attempt to use unsupervised machine learning techniques with this data set. This effort may contribute to creating a map of the field, identify the evolving themes in the literature and help to identify promising areas of research.
 
 ## Introduction
 
 Recent trends in global scientific output demonstrate a rapid and sustained increase in the production of vast amounts of unstructured data in the form of digitized text. This bounty in content is challenging researchers to explore and pursue novel methodological approaches and techniques to examine massive volumes of scientific publications in a systematic, efficient and reproducible manner. The expanding amount of bibliographic information available is exceeding traditional approaches for processing research output making it necessary to apply computational-assisted approaches for science mapping and evidence synthesis.
 
-This chapter explores abstracts of journal articles contained in the Digital Government Research Library (DGRL) via a Structural Topic Model. Probabilistic topic models are a type of unsupervised machine learning processes that applied to a corpus, a collection of documents such as the academic literature in a research field, allow the automated classification of large amounts of textual data and may assist scholars in social science in research tasks such as discovery, measurement, prediction and causal inference. The Digital Government Research Library is a collection of bibliographic references associated with Digital Government scholarship. In its version 17.5, it contains more than 16500 references, including journal articles, book chapters and conference papers. Contributions to this research domain come from established disciplines such as information science, computer science, organization science, sociology, public administration, and political science [@scholl2021].
+Topic modeling is an iterative process, thus this manuscript explores the training set[^1] of abstracts of journal articles contained in the Digital Government Research Library (DGRL) via a Structural Topic Model. Probabilistic topic models are a type of unsupervised machine learning processes that allow the exploration of a vast collection of documents (also known as corpus), perform the automated classification of large amounts of textual data and hence assist scholars in research tasks such as discovery, measurement, prediction and causal inference. Topic modeling enables the use of larger bibliographic data sets, and the extraction of relevant concepts from sizable corpora in a scalable way. To our best knowledge this is the first attempt to run a topic model for a corpus in the field of Digital Government Research.
 
-Previous explorations of this reference library have revealed the thematic evolution using bibliometric and scientometric approaches [@alcaide-muñoz2017], and identified the most influential journals, conferences and leading scholars in the field [@scholl2021a]. This data set has been used as well for conducting a systematic review on the impacts of e-Government using a public value perspective [@maclean2021a]. According to [@webster2002], accumulating a "complete census" of the relevant literature and following a concept-centric framework are crucial in a literature review. Topic modeling enables the use of larger bibliographic data sets, and the extraction of relevant concepts from sizable corpora in a scalable way. To our best knowledge this is the first attempt to run a topic model for a corpus in the field of Digital Government Research.
+[^1]: Best practices found in the literature suggest the split of sample data for topic modeling between a training and test data set. The structural topic model in this manuscript has been trained on 75% of the data.
 
-The impact of modern technologies (i.e. automation, digitalization, robotization) on labor has been on the research agenda of diverse disciplines and academic fields but explored mostly for a private sector context in advanced democracies. The public sector is a major employer in a wide variety of activities, also it is considered one of the largest adopters of information and communication technologies (ICT). In general, the public sector commands a large, diverse, and highly educated workforce. Recent technological developments have allowed the deployment of digital technologies, digital platforms, and digital infrastructures by both private corporations and public organizations with deep implications for the organization of work [@nambisan2019].
+The Digital Government Research Library is a collection of bibliographic references associated with Digital Government scholarship. In its 17.5 version, it contains more than 16500 references, including journal articles, book chapters and conference papers. Contributions to this research domain come from established disciplines such as information science, computer science, organization science, sociology, public administration, and political science [@scholl2021].
 
-The reported impact of digitalization on the organization work is diverse [@barley2001], it may automate work, create or eliminate jobs, deskill or reskill workers but also, little or negligible impact whatsoever. Digital government as a research field is in a phase of consolidation, allowing for the exploration of promising subfields for further inquiry. Despite the momentum in digital government research, one aspect that, to the best of our knowledge remains underexplored, is the effects of technological change on the public sector workforce [@plesner2018].
+Previous explorations of this reference library have revealed the thematic evolution using bibliometric and scientometric approaches [@alcaide-muñoz2017], and identified the most influential journals, conferences and leading scholars in the field [@scholl2021a]. This data set has been used as well for conducting a systematic review on the impacts of e-Government using a public value perspective [@maclean2021a]. According to [@webster2002], accumulating a "complete census" of the relevant literature and following a concept-centric framework are crucial in a literature review. Concept-centric approaches might be tackled via the use of "seed word dictionaries" in semi-supervised topic models [@watanabe2020], but this technique is out of the scope of this manuscript.
+
+The study of the linkage between modern technologies and quality and quantity labor has been on the research agenda of diverse disciplines and academic fields such as economics[@dosi2021; @fernández-macías2022], industrial relations [@doellgast2022a], information systems [@klein2021], and organization studies [@barley2020a], primarily focused in the private sector of advanced democracies. Technological change is a very broad term that may include a wide array of ICT enabled applications for automation, digitalization and robotization. Our attention is located in the digitalization of government, but despite the momentum in digital government research, one aspect that remains under explored is the effects of digital technologies on the public sector workforce [@plesner2018].
+
+The public sector is a major employer in a wide variety of activities, also it is considered one of the largest adopters of information and communication technologies (ICT). In general, the public sector commands a large, diverse, and highly educated workforce. Recent technological developments have allowed the deployment of digital technologies, digital platforms, and digital infrastructures by both private corporations and public organizations with deep implications for the organization of work [@nambisan2019].
+
+The reported impact of digitalization on the organization work is diverse [@barley2001], it may automate work, create or eliminate jobs, deskill or reskill workers but also, little or negligible impact whatsoever. Digital government as a research field is in a phase of consolidation, allowing for the exploration of promising subfields for further inquiry.
 
 Digitalization, in general, allows a more specific division of labor into the smallest possible tasks [@cherry2015], and in a public service context, opens more opportunities for the implementation of self-service solutions and facilitating scenarios for the co-production of public services [@scupola2021], turning each citizen and user into "his or her own administrator, caseworker and bureaucrat" [@schou2018], and possibly generating administrative burden of citizens [@madsen2021].
 
