--- a/script/tm_dgrl_Markdown.Rmd
+++ b/script/tm_dgrl_Markdown.Rmd
@@ -53,9 +53,11 @@ The Digital Government Research Library is a collection of bibliographic referen
 
 Previous explorations of this reference library have revealed the thematic evolution using bibliometric and scientometric approaches [@alcaide-muñoz2017], and identified the most influential journals, conferences and leading scholars in the field [@scholl2021a]. This data set has been used as well for conducting a systematic review on the impacts of e-Government using a public value perspective [@maclean2021a]. According to [@webster2002], accumulating a "complete census" of the relevant literature and following a concept-centric framework are crucial in a literature review. Concept-centric approaches might be tackled via the use of "seed word dictionaries" in semi-supervised topic models [@watanabe2020], but this technique is out of the scope of this manuscript.
 
-The study of the linkage between modern technologies and quality and quantity labor has been on the research agenda of diverse disciplines and academic fields such as economics[@dosi2021; @fernández-macías2022], industrial relations [@doellgast2022a], information systems [@klein2021], and organization studies [@barley2020a], primarily focused in the private sector of advanced democracies. Technological change is a very broad term that may include a wide array of ICT enabled applications for automation, digitalization and robotization. Our attention is located in the digitalization of government, but despite the momentum in digital government research, one aspect that remains under explored is the effects of digital technologies on the public sector workforce [@plesner2018].
+The study of the linkage between modern technologies and quality and quantity labor has been on the research agenda of diverse disciplines and academic fields such as economics[@dosi2021; @fernández-macías2022], industrial relations [@doellgast2022a], information systems [@klein2021], and organization studies [@barley2020a], primarily focused in the private sector of advanced democracies. Technological change is a very broad term that may include a wide array of information and communication technologies (ICT) enabled applications for automation, digitalization and robotization. Our attention is located in the digitalization of government, but despite the momentum in digital government research, one aspect that remains under explored is the effects of digital technologies on the public sector workforce [@plesner2018].
 
-The public sector is a major employer in a wide variety of activities, also it is considered one of the largest adopters of information and communication technologies (ICT). In general, the public sector commands a large, diverse, and highly educated workforce. Recent technological developments have allowed the deployment of digital technologies, digital platforms, and digital infrastructures by both private corporations and public organizations with deep implications for the organization of work [@nambisan2019].
+The public sector "composition" can be very heterogeneous in terms of scale and scope among diverse jurisdictions. Nonetheless, public sector organizations rank high among the largest sole employers globally in the form of armies and other defense related operations, State-Owned Enterprises (SOE) and health care providers, to name a few. The 'industries' in which public organizations operate are very diversified, have distinct degrees of technological sophistication and mixed levels of interaction with citizens and firms. The public sector, in general, commands a large, diverse, and highly educated workforce.
+
+Governments are also considered one of the largest adopters and users of ICT. (insert Guenduez, Lofgren) and it is considered a Recent technological developments have allowed the deployment of digital technologies, digital platforms, and digital infrastructures by both private corporations and public organizations with deep implications for the organization of work [@nambisan2019].
 
 The reported impact of digitalization on the organization work is diverse [@barley2001], it may automate work, create or eliminate jobs, deskill or reskill workers but also, little or negligible impact whatsoever. Digital government as a research field is in a phase of consolidation, allowing for the exploration of promising subfields for further inquiry.
 
